# sqlite-rust-wasm

./: .gitmodules  README.md
js/example/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
js/example-official/: index.html  package.json  pnpm-lock.yaml
js/example-official/public/: sqlite3.js  sqlite3.wasm
js/example-official/src/: main.ts
js/example/public/: .gitignore
js/example/src/: main.ts
rs/crsqlite_migrator/: Cargo.toml
rs/sqlite_nostd/: Cargo.toml
rs/sqlite_nostd/example_extension/: Cargo.toml  README.md
rs/sqlite_nostd/example_extension/src/: lib.rs
rs/sqlite_nostd/sqlite3_allocator/: Cargo.toml
rs/sqlite_nostd/sqlite3_allocator/examples/: global_alloc.rs
rs/sqlite_nostd/sqlite3_allocator/src/: lib.rs
rs/sqlite_nostd/sqlite3_capi/: Cargo.toml
rs/sqlite_nostd/sqlite3_capi/src/: lib.rs
rs/sqlite_nostd/src/: lib.rs
rs/test_extension/: Cargo.toml
rs/test_extension/src/: lib.h  lib.rs
rs/test_runtime_ext/: .gitignore  Cargo.toml  build.rs  notes.md  wrapper.h
rs/test_runtime_ext/emcc/: Makefile
rs/test_runtime_ext/src/: lib.rs
