[package]
name = "example_extension"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wonlaw"]
description = "Minimal bindings for SQLite3 that do not require std"
keywords = ["sqlite"]
license = "MIT"

[lib]
name = "example_extension"
crate-type = ["cdylib"]

[dependencies]
sqlite_nostd = { path="../"}
sqlite3_allocator = { path="../sqlite3_allocator" }

